<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.lcw.study.clonebaemin.feature.search.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="16dp"
            android:background="@color/light_grayy"
            app:iconifiedByDefault="false"
            app:layout_constraintTop_toTopOf="parent"
            app:queryBackground="@null"
            app:queryHint="@string/searchInput"
            app:theme="@style/AppSearchView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/recentSearches"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btn_delete_all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_delete_all" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/light_grayy"
            android:text="@string/deleteAll"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_view" />

        <HorizontalScrollView
            android:id="@+id/horizontal_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/btn_delete_all">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:singleLine="true"
                app:singleSelection="true">

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/ll_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll_view">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/light_grayy" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_best_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/bestSearch"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_divider" />

        <TextView
            android:id="@+id/tv_search_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="10.07 14:00 기준"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_best_search" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_rank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_divider" />

        <LinearLayout
            android:id="@+id/ll_ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_time"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal">

            <include
                app:layout_constraintTop_toBottomOf="@+id/tv_search_time"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                layout="@layout/layout_best_word"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <include
                app:layout_constraintTop_toBottomOf="@+id/tv_search_time"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                layout="@layout/layout_best_word"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_divider_ranking_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ll_ranking">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/light_grayy" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/b_mart_suggested_keywords"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_divider_ranking_bottom" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_banner"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">


        </androidx.viewpager2.widget.ViewPager2>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>